--- a/nested-elements/composer.json
+++ b/nested-elements/composer.json
@@ -9,10 +9,10 @@
         "backpack/crud": "^6.7",
         "backpack/theme-tabler": "^1.2",
         "laravel/framework": "^11.9",
-        "laravel/tinker": "^2.9"
+        "laravel/tinker": "^2.9",
+        "staudenmeir/laravel-adjacency-list": "*"
     },
     "require-dev": {
-        "backpack/devtools": "*",
         "backpack/generators": "^4.0",
         "fakerphp/faker": "^1.23",
         "laravel/pint": "^1.13",
