--- a/nested-elements/composer.json
+++ b/nested-elements/composer.json
@@ -9,6 +9,7 @@
         "backpack/crud": "^6.7",
         "backpack/theme-tabler": "^1.2",
         "laravel/framework": "^11.9",
+        "laravel/socialite": "^5.15",
         "laravel/tinker": "^2.9",
         "staudenmeir/laravel-adjacency-list": "*"
     },
